--- a/WebInterface/sm_rules.html
+++ b/WebInterface/sm_rules.html
@@ -7,14 +7,18 @@
 	 <div id="config">
 		 <p><b>If</b> <span name="ifselectors"></span> <button name="addif">Add Condition</button></p> 
 		 <p><b>While</b> <span name="whileselectors"></span> <button name="addwhile">Add Condition</button></p>
-		<p><b>Then Write</b> <input name="value" type="text" /> <b>to Endpoint</b> <input name="eid" type="text" /></p>
-		<button name="addrule">Add this Rule</button>
+		<p><b>Then Write</b> <input name="value" type="text" /> <b>to Endpoint ID</b> <input name="eid" type="text" /></p>
+		<button name="addrule">Add this Rule</button><button name="reset">Reset</button>
 	</div>
 	<hr>
 	<h3>Rules:</h3>
 	<div id="rules"></div>
 </body>                                                                 
  <script type="text/javascript">                                         
+	 function printJSON(jsonText, i) {
+		 $("#rules").append("<b>If</b> " + rules[i].ifCond + " <b>While</b> " + rules[i].whileCond + " <b>Then Write</b> " + rules[i].value + " <b>to EID</b> " + rules[i].eid + "<br />");
+	 }
+	 
 	 var rules = new Array();
 	 $('button[name="addif"]').click(function() {
 			$('span[name="ifselectors"]').append('<select><option value="0">Cond 0</option><option value="1">Cond 1</option></select>');
@@ -22,13 +26,22 @@
  	$('button[name="addwhile"]').click(function() {
 			$('span[name="whileselectors"]').append('<select><option value="0">Cond 0</option><option value="1">Cond 1</option></select>');
 			});
- 	$('button[name="addrule"]').click(function() {
-			$("#rules").append("<b>Rule#"+rules.length+":</b><br /><b>If</b>");
+	$('button[name="reset"]').click(function() {
+			$("span").html("");
+			$("input").val("");
+			});
+	$('button[name="addrule"]').click(function() {
+			var tmpIfConds = '';
+			var tmpWhileConds = '';
+			$("#rules").append("<b>Rule#"+rules.length+":</b><br />");
 			$('span[name="ifselectors"] select').each(function(index) {
-					$("#rules").append(" Cond " + $(this).val());
-					});
-			$("#rules").append("<br />");
-			rules.push(rules.length);
+				tmpIfConds += '"Cond ' + $(this).val() + '",';
+				});
+			$('span[name="whileselectors"] select').each(function(index) {
+				tmpWhileConds += '"Cond ' + $(this).val() + '",';
+				});
+			rules.push(JSON.parse('{"ifCond" : [' + tmpIfConds.substr(0, tmpIfConds.length - 1) + '], "whileCond" : [' + tmpWhileConds.substr(0, tmpWhileConds.length - 1) + '], "value" :' + $("input[name=value]").val() + ', "eid" :' + $("input[name=eid]").val() + '}'));
+			printJSON(rules, rules.length - 1);
 			});
  </script>                                                               
  </html>
